[project]
name = "pylox"
version = "0.1.0"
description = "A Lox implementation written in Python."
authors = [
    { name = "Giulio De Matteis", email = "hello@giuliodematte.is" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
pylox = "pylox:main"
ast-printer = "pylox.ast_printer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
generate-ast = "python ./tools/generate_ast.py './src/pylox'"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pylox"]
